# LLMDriftExperiment

./: .gitignore  CITATION.cff  GEMINI.md  LICENSE  LICENSE.md  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt  test_batch_eval.py
.github/workflows/: pylint.yml
Debate Agents/: main.py
Debate Agents/memory/: shared_memory.json
Debate Agents/tools/: memory_tools.py
Drift Analysis/analysis-v1-temp-0-max-tokens-2048/: analysis-v1-temp-0-max-tokens-2048_analysis.json  analysis-v1-temp-0-max-tokens-2048_report.md
Drift Analysis/analysis-v4-temp-1-max-tokens-8192/: analysis-v4-temp-1-max-tokens-8192_analysis.json
Drift Analysis/analysis-v5-temp-1-max-tokens-4096/: analysis-v5-temp-1-max-tokens-4096_analysis.json
Drift Analysis/analysis-v6-temp-1-max-tokens-8192/: analysis-v6-temp-1-max-tokens-8192_analysis.json
LLM Drift Detector/: __init__.py
LLM Drift Skills/: persona_dna.md  persona_metric_skills.md
LLM Drift Skills/affective/: arousal.md  sentiment.md  subjectivity.md  toxicity_score.md  valence.md
LLM Drift Skills/cognitive_structural/: cognitive_load.md  information_density.md  persona_drift.md  (+1 more)
debate_agents/: agent.py  config.py  graph.py  main.py  utils.py
debate_deep_agents/: graph.py  main.py
docs/: configuration.md  how-to-cite.md  key-findings.md  license.md  limitations.md  project-structure.md  quantification-engine.md  research-lifecycle.md  research-publications.md  setup-usage.md  simulation-engine.md  what-is-drift.md
llm_drift_detector/: app.py  plan.md
persona_research/: .env  main.py  requirements.txt
(+230 files in other folders)
