[project]
name = "llmdriftexperiment"
version = "0.1.0"
description = "A specialized framework to evaluate LLM Drift through adversarial debate."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=3.2.3",
    "langgraph>=1.1.10",
    "litellm>=1.83.14",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
]
