[project]
name = "llmdriftexperiment"
version = "0.1.3"
description = "A specialized framework to evaluate LLM Drift through adversarial debate."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=3.2.3",
    "langgraph>=1.1.10",
    "litellm>=1.83.14",
    "matplotlib>=3.10.9",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "ruptures>=1.1.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
]
